# drones_swarm

./: .gitignore  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
src/drone/: CMakeLists.txt  Cargo.toml  package.xml
src/drone/.cargo/: config.toml
src/drone/src/drone/: drone.rs  main.rs  state.rs
src/drone/src/motor/: main.rs  motor.rs  state.rs
src/drone_msgs/: CMakeLists.txt  package.xml
src/drone_msgs/msg/: MotorState.msg
src/drone_msgs/srv/: SetThrust.srv
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/rviz/: config.rviz
src/my_robot_bringup/worlds/: test_world.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/simulation/: my_robot.urdf
src/swarm_bringup/: CMakeLists.txt  package.xml
src/swarm_bringup/launch/: drone.launch.py
