[package]
name = "drone"
version = "0.1.0"
authors = ["Dmytro Yerusalimtsev <dima.yerusalimtsev@gmail.com>"]
edition = "2021"

[profile.colcon]
inherits = "release"

[[bin]]
name = "drone"
path = "src/drone/main.rs"

[[bin]]
name = "motor"
path = "src/motor/main.rs"

[dependencies]
r2r = "0.8.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
rust-3d = "0.34.0"