<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>drone</name>
  <version>1.0.0</version>
  <description>This package contains nodes that represent drone and it's components.</description>
  <maintainer email="dima.yerusalimtsev@gmail.com">Dmytro Yerusalimtsev</maintainer>
  <license>Apache License 2.0</license>
  <author>Dmytro Yerusalimtsev</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>drone_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>drone_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
